syntax = "proto3";

// server-bound

message GetMessages {
  int64 channel_id = 1; 
  int32 limit = 2;
  int64 before_timestamp = 3;
  int64 after_timestamp = 4;
}

message SendMessage {
  int64 channel_id = 1;
  string body = 2;
} 

// client-bound

message Message {
  int64 channel_id = 1;
  int64 message_id = 2;
  int64 created_timestamp = 3;
  string author = 4;
  string body = 5;
}

message GiveMessages {
  int64 channel_id = 1;
  Message messages = 2;
}

message SendMessageAck {
  enum Action {
    ACCEPT = 0;
    REJECT = 1;
  }
  Action action = 1;
  Message created = 2;
}
